--- a/files/etc/nginx/conf.d/realip_cloudflare.conf
+++ b/files/etc/nginx/conf.d/realip_cloudflare.conf
@@ -1,3 +1,5 @@
+# Cloudflare IPv4: https://www.cloudflare.com/ips-v4
+# Cloudflare IPv6: https://www.cloudflare.com/ips-v6
 ### Cloudflare ###
 set_real_ip_from 103.22.200.0/22;
 set_real_ip_from 103.31.4.0/22;
