--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -1,15 +1,14 @@
 daemon off;
 user www-data;
 worker_processes auto;
+pid /run/nginx.pid;
+error_log /var/log/nginx/error.log warn;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
+include /etc/nginx/modules-enabled/*.conf;
 
 events {
     worker_connections  1024;
 }
-
 
 http {
 	# this is the internal Docker DNS, cache only for 30s
