--- a/files/etc/nginx/snippets/fastcgi_php.conf
+++ b/files/etc/nginx/snippets/fastcgi_php.conf
@@ -48,20 +48,20 @@ location ~ \.php$ {
 	fastcgi_hide_header   X-Powered-By;
 	#more_clear_headers 'Server*';
 
-	# Setting custom settings. Reference: http://michaelshadle.com/2011/02/11/setting-php-ini-parameters-from-nginx
-	set $phpini "
-max_execution_time=600
-max_input_vars=2000
-open_basedir=/var/www/html:/tmp
-upload_tmp_dir=/tmp
-session.save_path=/tmp
-upload_max_filesize=20M
-post_max_size=20M
-memory_limit=256M
-display_errors=Off
-log_errors=On
-$phpini";
-	fastcgi_param PHP_ADMIN_VALUE $phpini;
+# 	# Setting custom settings. Reference: http://michaelshadle.com/2011/02/11/setting-php-ini-parameters-from-nginx
+# 	set $phpini "
+# max_execution_time=600
+# max_input_vars=2000
+# open_basedir=/var/www/html:/tmp
+# upload_tmp_dir=/tmp
+# session.save_path=/tmp
+# upload_max_filesize=20M
+# post_max_size=20M
+# memory_limit=256M
+# display_errors=Off
+# log_errors=On
+# $phpini";
+# 	fastcgi_param PHP_ADMIN_VALUE $phpini;
 
 	try_files $uri $uri/ =404;
 }
