--- a/files/etc/nginx/snippets/fastcgi_php.conf
+++ b/files/etc/nginx/snippets/fastcgi_php.conf
@@ -1,13 +1,13 @@
 location ~ \.php$ {
-	# if (!-f $document_root$fastcgi_script_name) {
-	# 	return 404;
-	# }
+	if (!-f $document_root$fastcgi_script_name) {
+		return 404;
+	}
 	
 	#fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
 	fastcgi_pass 127.0.0.1:9000;
 	
 	fastcgi_index index.php;
-	#fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	fastcgi_split_path_info ^(.+\.php)(/.+)$;
 	fastcgi_param PATH_INFO $fastcgi_path_info;
 	fastcgi_pass_header Set-Cookie;
