--- a/files/etc/nginx/snippets/fastcgi_php.conf
+++ b/files/etc/nginx/snippets/fastcgi_php.conf
@@ -6,8 +6,11 @@ location ~ \.php$ {
 		return 404;
 	}
 	
-	#fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
-	fastcgi_pass 127.0.0.1:9000;
+	
+	fastcgi_pass $upstream;
+
+	include fastcgi_params;
+	fastcgi_param SERVER_SOFTWARE nginx; # overwrite for secure reason.
 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	fastcgi_param PATH_INFO $fastcgi_path_info;
 	fastcgi_pass_header Set-Cookie;
@@ -19,13 +22,10 @@ location ~ \.php$ {
 	fastcgi_send_timeout 600;
 	fastcgi_read_timeout 600;
 
-	include fastcgi.conf;
-	# Overwrite the one in fastcgi.conf
-	fastcgi_param SERVER_SOFTWARE nginx;
 
 	### These was grabbed from http://claylo.com/post/7617674014/ssl-php-fpm-and-nginx ##
 	# Provide as much of Apache's SSL +StdEnvVars data as possible.
-	#fastcgi_param HTTPS                 on; # fastcgi.conf already has this, so comment it.
+	#fastcgi_param HTTPS                 $https if_not_empty; # fastcgi_params already has this, so comment it.
 	fastcgi_param SSL_PROTOCOL          $ssl_protocol if_not_empty;
 	fastcgi_param SSL_CIPHER            $ssl_cipher if_not_empty;
 	fastcgi_param SSL_SESSION_ID        $ssl_session_id if_not_empty;
